2 часть ФЗ